--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^6.0.11",
+    "vite-plugin-image-optimizer": "^2.0.3",
     "vue-tsc": "^2.2.0"
   }
 }
